tests/golden/invalid_il/unknown_symbol.il
il 0.1
func @unknown_symbol() -> void {
entry:
  call @does_not_exist()
  ret
}
